--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -266,6 +266,11 @@ slider-component.slider-component-full-width {
 
 .slider-counter-fixed {
   position: fixed;
+  z-index: 1;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: #ffffff69;
 }
 
 @media screen and (min-width: 750px) {
