--- a/sections/featured-slideshow.liquid
+++ b/sections/featured-slideshow.liquid
@@ -212,7 +212,7 @@
   </div>
 
   {%- if section.settings.collection.products.size > 1 and section.settings.auto_rotate == false -%}
-    <div class="slideshow__controls slider-buttons no-js-hidden{% if section.settings.show_text_below %} slideshow__controls--border-radius-mobile{% endif %}">
+    <div class="slideshow__controls {% if section.settings.fixed_slider_visual %} slider-counter-fixed{% endif %} slider-buttons no-js-hidden{% if section.settings.show_text_below %} slideshow__controls--border-radius-mobile{% endif %}">
       <button
         type="button"
         class="slider-button slider-button--prev"
@@ -222,7 +222,7 @@
       >
         {% render 'icon-caret' %}
       </button>
-      <div class="slider-counter {% if section.settings.fixed_slider_visual %} slider-counter-fixed{% endif %} slider-counter--{{ section.settings.slider_visual }}{% if section.settings.slider_visual == 'counter' or section.settings.slider_visual == 'numbers' %} caption{% endif %}">
+      <div class="slider-counter slider-counter--{{ section.settings.slider_visual }}{% if section.settings.slider_visual == 'counter' or section.settings.slider_visual == 'numbers' %} caption{% endif %}">
         {%- if section.settings.slider_visual == 'counter' -%}
           <span class="slider-counter--current">1</span>
           <span aria-hidden="true"> / </span>
