--- a/sections/featured-slideshow.liquid
+++ b/sections/featured-slideshow.liquid
@@ -54,7 +54,7 @@
   aria-label="{{ section.settings.accessibility_info | escape }}"
 >
   {%- if section.settings.auto_rotate and section.settings.collection.products.size > 1 -%}
-    <div class="slideshow__controls slideshow__controls--top slider-buttons no-js-hidden{% if section.settings.show_text_below %} slideshow__controls--border-radius-mobile{% endif %}">
+    <div class="slideshow__controls {% if section.settings.fixed_slider_visual %} slider-counter-fixed{% endif %}  slideshow__controls--top slider-buttons no-js-hidden{% if section.settings.show_text_below %} slideshow__controls--border-radius-mobile{% endif %}">
       <button
         type="button"
         class="slider-button slider-button--prev"
@@ -212,7 +212,7 @@
   </div>
 
   {%- if section.settings.collection.products.size > 1 and section.settings.auto_rotate == false -%}
-    <div class="slideshow__controls {% if section.settings.fixed_slider_visual %} slider-counter-fixed{% endif %} slider-buttons no-js-hidden{% if section.settings.show_text_below %} slideshow__controls--border-radius-mobile{% endif %}">
+    <div class="slideshow__controls slider-buttons no-js-hidden{% if section.settings.show_text_below %} slideshow__controls--border-radius-mobile{% endif %}">
       <button
         type="button"
         class="slider-button slider-button--prev"
